Fix WAV recording functionality

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
       <button id="recordButton" class="record-btn">Record</button>
       <button id="stopButton" class="record-btn" disabled>Stop</button>
       <a id="downloadButton" class="record-btn" disabled>Download</a>
-      <span id="recordingStatus"></span>
+      <div id="recordingStatus" class="recording-status">Ready to record</div>
     </div>
 
     <!-- Tutorial Mode -->
