Convert to cyberpunk glassy theme with light mode

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="keyboard.css">
 </head>
 <body>
+  <div class="theme-toggle" id="themeToggle">
+    <span class="theme-icon">🌙</span>
+    <span class="theme-text">Dark</span>
+  </div>
+  
   <div id="app">
     <h1>JackSynth</h1>
     
